modificado rotas de validar missão e historico para verificar token em vez de passar a id do usuario direto
