# src/controllers/acessoHistoricoController.js
@@ -2,7 +2,14 @@ const historicoAcessoService = require('../services/acessoHistoricoService');
 
 module.exports = class acessoHistoricoController {
   static createNewAcessRecords = async (req, res) => {
+    const Usuario = require('../models/usuario');
+
     try {
+      let email = req.user.email
+      let user = await Usuario.findOne({ where: { email } })
+      // Adiciona o id_usuario ao req.body
+      req.body.id_usuario = user.id_usuario;
+
       const newDestino = await historicoAcessoService.createNewAcessRecords(
         req.body,
       );
@@ -19,10 +26,15 @@ module.exports = class acessoHistoricoController {
   };
 
   static findAcessRecordsById = async (req, res) => {
+    const Usuario = require('../models/usuario');
+    
     try {
+      let email = req.user.email
+      let user = await Usuario.findOne({ where: { email } })
+
       const acessoHistoricoUsuario =
         await historicoAcessoService.findAcessRecordsByPk(
-          req.params.id_usuario,
+          user.id_usuario,
         );
       return res.status(200).json(acessoHistoricoUsuario);
     } catch (err) {
