# src/routes/acessoHistoricoRoute.js
@@ -1,16 +1,18 @@
 const express = require('express');
 const acessoHistoricoController = require('../controllers/acessoHistoricoController');
-const { verifyApiKey } = require('../middlewares/authMiddleware');
+const { verifyApiKey, verifyToken } = require('../middlewares/authMiddleware');
 
 const routes = express.Router();
 
 routes.post(
   '/api/acesso-historico',
+  verifyToken,
   verifyApiKey,
   acessoHistoricoController.createNewAcessRecords,
 );
 routes.get(
-  '/api/acesso-historico/:id_usuario',
+  '/api/acesso-historico/',
+  verifyToken,
   verifyApiKey,
   acessoHistoricoController.findAcessRecordsById,
 );
